--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,7 @@
+name: Crawl
+
 on:
+  push:
   schedule:
   - cron: "0 0 * * *"
   workflow_dispatch:
@@ -12,12 +15,17 @@ jobs:
       with:
         ref: gh_pages
 
+    - uses: actions/setup-python@v3
+    - run: pip3 install urllib3
+
     - run: |
-        curl -fL https://github.com/imba-tjd/dlwatcher/raw/master/dlwatcher.py | python -c
+        curl -LO https://github.com/imba-tjd/dlwatcher/raw/master/data_tmpl.html
+
+        curl -fL https://github.com/imba-tjd/dlwatcher/raw/master/dlwatcher.py | python3
         mv data.html index.html
 
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name  "GitHub Actions"
-        git add .
+        git add data.csv index.html
         git commit -m "Update"
         git push
