curl: add no-cache

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/setup-python@v3
     - run: pip3 install urllib3
 
-    - run: curl -LO 'https://github.com/imba-tjd/dlwatcher/raw/master/{data_tmpl.html,dlwatcher.py,deploy.sh}'
+    - run: "curl -LO 'https://github.com/imba-tjd/dlwatcher/raw/master/{data_tmpl.html,dlwatcher.py,deploy.sh}' -H 'Cache-Control: no-cache'"
 
     - run: |
         python3 dlwatcher.py
